GNOME Bugzilla – Bug 793622
Missing reference addition on children_changed::add
Last modified: 2019-05-01 22:22:50 UTC
Created attachment 368592 [details] [review] proposed fix We have been experience duplicate unreferences while running netbeans. children_changed::remove indeed unreference the parent. But there is no corresponding reference on children_changed::add, thus unpaired referencing. The attached patch fixes the issues with netbeans
Fixed by 0dd40b6945429a1f7bdd688a1f2b1e480b564c53 ("Fix missing reference addition on children_changed::add")