Fix missing reference addition on children_changed::add

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=793622